--- a/sources/views/index.jade
+++ b/sources/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Hello #{userName}, Welcome to #{title}
+  p Answer on Homework 1.2 is #{magicNumber}
