--- a/sources/views/index.jade
+++ b/sources/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Answer on Homework 1.3 is #{result}
+  h1 Homeworks for course M101P: MongoDB for Developers
+  ul
+      li Homework 1 (Week 1)
+          ul
+              li
+                  a(href='/hw1-2/') Homework 1-2
+              li
+                  a(href='/hw1-3/50') Homework 1-3
