Add homework 1-1 to Node.js implementation

--- a/sources/views/index.jade
+++ b/sources/views/index.jade
@@ -6,6 +6,8 @@ block content
       li Homework 1 (Week 1)
           ul
               li
+                  a(href='/hw1-1/') Homework 1-1
+              li
                   a(href='/hw1-2/') Homework 1-2
               li
                   a(href='/hw1-3/50') Homework 1-3
